--- a/Source/Zonit.Extensions.Identity.Abstractions/Zonit.Extensions.Identity.Abstractions.csproj
+++ b/Source/Zonit.Extensions.Identity.Abstractions/Zonit.Extensions.Identity.Abstractions.csproj
@@ -1,8 +1,1 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" >
-
-	<PropertyGroup>
-		<AssemblyVersion>0.0.30</AssemblyVersion>
-		<FileVersion>$(AssemblyVersion)</FileVersion>
-		<Version>$(AssemblyVersion)</Version>
-	</PropertyGroup>
-</Project>
+﻿<Project Sdk="Microsoft.NET.Sdk" />
