Aktualizacja frameworków i zarządzania wersjami
Zmieniono docelowe frameworki z `net8.0` na `net8.0;net9.0`.
Dodano centralne zarządzanie wersjami pakietów (`ManagePackageVersionsCentrally`).
Zaktualizowano wersję `AssemblyVersion` z `0.1.5` na `0.1.6`.
Dodano ustawienia dotyczące symboli debugowania: `IncludeSymbols`, `IncludeSource` oraz `SymbolPackageFormat`.
Usunięto grupę elementów `ItemGroup` zawierającą wersje pakietów dla `Microsoft.Extensions.DependencyInjection.Abstractions` i `Microsoft.Extensions.Hosting`.
Dodano warunkowe grupy elementów `ItemGroup` dla `net8.0` i `net9.0`, zawierające odpowiednie wersje pakietów dla `Microsoft.Extensions.DependencyInjection.Abstractions` i `Microsoft.Extensions.Hosting`.

--- a/Source/Directory.Packages.props
+++ b/Source/Directory.Packages.props
@@ -1,9 +1,10 @@
 <Project>
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+	  <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+	  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>0.1.5</AssemblyVersion>
+    <AssemblyVersion>0.1.6</AssemblyVersion>
     <FileVersion>$(AssemblyVersion)</FileVersion>
     <Version>$(AssemblyVersion)</Version>
     <Authors>Zonit</Authors>
@@ -12,9 +13,20 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/Zonit</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Zonit/Zonit.Extensions.Identity</RepositoryUrl>
+
+	  <!-- Debugging symbol settings -->
+	  <IncludeSymbols>true</IncludeSymbols>
+	  <IncludeSource>true</IncludeSource>
+	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
-  <ItemGroup>
-	  <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-	  <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-  </ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+	</ItemGroup>
 </Project>
